--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="panel-heading">Real London 2 - 5 Real Ladrid</div>
             <div class="panel-body">6 March 2017</div>
             <div class="panel-body">
-                Two wonder goals from Tom Mantle, an astute signing from UHY, were the only things Real London had to smile about at the end of their first game. For the first goal Mantle made a perfectly timed run to meet Tom Howourth’s ball from deep and a looping header, over the keeper and into the far corner. His second was a laser shot from just inside the opponent’s half, leaving the keeper grasping at thin air.
+                Two wonder goals from Tom Mantle, an astute signing from UHY, were the only things Real London had to smile about at the end of their first game. For the first goal Mantle made a perfectly timed run to meet Tom Howourth’s ball from deep and looped a header, over the keeper and into the far corner. His second was a laser shot from just inside the opponent’s half, leaving the keeper grasping at thin air.
                 <br />
                 <br />
                 The mood was optimistic in the wake of the defeat - it was felt that they had the makings of a good team. Little did they know that they wouldn’t beat their tally of 2 goals in a game for the rest of the season…
