--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Real London</h1>
-            <h3>The greatest Stratford based 7-a-side team of all time</h3>
+            <h3>The team that inspired their Madrid counterparts</h3>
         </div>
         <nav class="navbar navbar-default">
             <div class="container">
                 <ul class="nav navbar-nav">
                     <li><a href="#">Season One</a></li>
-                    <li><a href="#">Season Two</a></li>
+                    <li><a href="season2.html">Season Two</a></li>
                 </ul>
             </div>
         </nav>
