Added index page

--- a/season2.html
+++ b/season2.html
@@ -19,7 +19,8 @@
         <nav class="navbar navbar-default">
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Season One</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="season1.html">Season One</a></li>
                     <li><a href="#">Season Two</a></li>
                 </ul>
             </div>
@@ -40,8 +41,10 @@
                 <br />
                 The first goal was a great piece of individual skill from Hedley-Dent gliding through the defense he placed his shot low and beyond the keeper. The second was arguably the pick of the bunch - Howourth and Hedley-Dent combined really well to split the defnse wide open and leave Bridger to tap in from close range. Roles were reversed for the third as Bridger turned provider for Howourth who flicked the ball insidethe far post. Tom Mantel secured the fourth with a long range effort and the rout was completed in the last minute of the game when a good McDowell save allowed Real to brake away down field ending with Kloss smashing in while one on one with the keeper.
             </div>
+            <div class="panel-footer">TEAM - Bridger, Hedley-Dent, Howourth, Kloss, Mantle, McDowell, Thornton </div>
+            <div class="panel-footer">MOTM - Hedley-Dent</div>
+            <div class="panel-footer">GOALS - Hedley-Dent, Bridger, Houworth, Mantle, Kloss</div>
         </div>
-
     </div>
 </body>
 </html>
