--- a/stats.html
+++ b/stats.html
@@ -16,8 +16,8 @@
     </table>
 </div>
 
-<div class="panel panel-primary">
-    <div class="panel-heading">End of Season 1 Awards</div>
+<div class="panel panel-primary" ng-repeat="awards in seasonAwards">
+    <div class="panel-heading">End of Season {{$index + 1}} Awards</div>
     <table class="table">
         <tr>
             <td><strong>Award</strong></td>
@@ -25,45 +25,19 @@
         </tr>
         <tr>
             <td>Most Appearances</td>
-            <td>{{seasonOneAppearances}}</td>
+            <td>{{awards.appearances}}</td>
         </tr>
         <tr>
             <td>Top Goalscorer</td>
-            <td>{{seasonOneGoalscorer}}</td>
+            <td>{{awards.goalscorer}}</td>
         </tr>
         <tr>
             <td>Best Goals to Games Ratio</td>
-            <td>{{seasonOneRatio}}</td>
+            <td>{{awards.ratio}}</td>
         </tr>
         <tr>
             <td>Man of the Season</td>
-            <td>{{seasonOnePlayer}}</td>
-        </tr>
-    </table>
-</div>
-
-<div class="panel panel-primary">
-    <div class="panel-heading">End of Season 2 Awards</div>
-    <table class="table">
-        <tr>
-            <td><strong>Award</strong></td>
-            <td><strong>Winner</strong></td>
-        </tr>
-        <tr>
-            <td>Most Appearances</td>
-            <td>{{seasonTwoAppearances}}</td>
-        </tr>
-        <tr>
-            <td>Top Goalscorer</td>
-            <td>{{seasonTwoGoalscorer}}</td>
-        </tr>
-        <tr>
-            <td>Best Goals to Games Ratio</td>
-            <td>{{seasonTwoRatio}}</td>
-        </tr>
-        <tr>
-            <td>Man of the Season</td>
-            <td>{{seasonTwoPlayer}}</td>
+            <td>{{awards.player}}</td>
         </tr>
     </table>
 </div>
