--- a/season.html
+++ b/season.html
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-    <div class="panel-heading">{{seasonTitle}}</div>
+    <div class="panel-heading">{{title}}</div>
     <div class="panel-body">{{overview}}</div>
 </div>
 
@@ -7,7 +7,9 @@
     <div class="panel-heading">{{match.title}}</div>
     <div class="panel-body">{{match.date}}</div>
     <div class="panel-body" style="white-space:pre-line">{{match.report}}</div>
+
     <iframe class="panel-body" ng-src="{{match.highlights | trusted}}" width="560" height="315" style="border:none; overflow:hidden; display:block; margin:0 auto" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
+
     <div class="panel-footer">TEAM - <span style="margin-right:5px" ng-repeat="player in match.team">{{player}}{{$last ? '' : ','}}</span></div>
     <div class="panel-footer">MOTM - {{match.motm}}</div>
     <div class="panel-footer">GOALS - <span style="margin-right:5px" ng-repeat=" scorer in match.goals track by $index">{{scorer}}{{$last ? '' : ','}}</span></div>
