--- a/season.html
+++ b/season.html
@@ -6,13 +6,20 @@
 <div class="panel" ng-class="{'panel-success': match.winLoseDraw == 'win', 'panel-warning': match.winLoseDraw == 'draw', 'panel-danger':match.winLoseDraw == 'lose'}" ng-repeat="match in matches">
     <div class="panel-heading">{{match.title}}</div>
     <div class="panel-body">{{match.date}}</div>
-    <div class="panel-body" style="white-space:pre-line">{{match.report}}</div>
 
-    <div class="holds-the-iframe" style="background:url(loading.png) center center no-repeat;">
+    <ul class="nav nav-pills nav-justified">
+        <li role="presentation" ng-class="{active:tab=='report'}"><a ng-click="tab = tab=='report' ? a : 'report'">Report</a></li>
+        <li role="presentation" ng-class="{active:tab=='highlights'}"><a ng-click="tab = tab=='highlights' ? a : 'highlights'">Highlights</a></li>
+        <li role="presentation" ng-class="{active:tab=='photos'}"><a ng-click="tab = tab=='photos' ? a : 'photos'">Photos</a></li>
+    </ul>
+
+    <div class="panel-body" style="white-space:pre-line" ng-show="tab == 'report'">{{match.report}}</div>
+
+    <div class="holds-the-iframe" ng-show="tab == 'highlights'" style="background:url(loading.png) center center no-repeat;">
         <iframe class="panel-body" ng-src="{{match.highlights | trusted}}" width="560" height="315" style="border:none; overflow:hidden; display:block; margin:0 auto" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
     </div>
 
-    <uib-carousel>
+    <uib-carousel ng-show="tab == 'photos'">
         <uib-slide ng-repeat="photo in match.photos" index="$index">
             <iframe ng-src="{{photo | trusted}}" width="500" height="472" style="border:none; overflow:hidden;" />
         </uib-slide>
