--- a/stats.html
+++ b/stats.html
@@ -2,12 +2,37 @@
     <div class="panel-heading">Overall Player Stats</div>
     <table class="table">
         <tr>
-            <td><strong>Player</strong></td>
-            <td><strong>Appearances</strong></td>
-            <td><strong>Goals</strong></td>
-            <td><strong>MOTM</strong></td>
+            <th>
+                <a>
+                    Player
+                </a>
+            </th>
+            <th>
+                <a ng-click="orderByField='appearances'; reverseSort = !reverseSort">
+                    Appearances <span ng-show="orderByField == 'appearances'">
+                        <span ng-show="!reverseSort">^</span>
+                        <span ng-show="reverseSort">v</span>
+                    </span>
+                </a>
+            </th>
+            <th>
+                <a ng-click="orderByField='goals'; reverseSort = !reverseSort">
+                    Goals <span ng-show="orderByField == 'goals'">
+                        <span ng-show="!reverseSort">^</span>
+                        <span ng-show="reverseSort">v</span>
+                    </span>
+                </a>
+            </th>
+            <th>
+                <a ng-click="orderByField='MOTMs'; reverseSort = !reverseSort">
+                    MOTMs <span ng-show="orderByField == 'MOTMs'">
+                        <span ng-show="!reverseSort">^</span>
+                        <span ng-show="reverseSort">v</span>
+                    </span>
+                </a>
+            </th>
         </tr>
-        <tr ng-repeat="player in players">
+        <tr ng-repeat="player in players|orderBy:orderByField:reverseSort" ">
             <td>{{player.name}}</td>
             <td>{{player.appearances}}</td>
             <td>{{player.goals}}</td>
