Added profile photos

--- a/season.html
+++ b/season.html
@@ -8,7 +8,7 @@
     <div class="panel-body">{{match.date}}</div>
 
     <ul class="nav nav-pills nav-justified">
-        <li role="presentation" ng-class="{active:tab=='report'}"><a ng-click="tab = tab=='report' ? a : 'report'">Report</a></li>
+        <li role="presentation" ng-class="{active:tab=='report'}"><a ng-click="tab = tab=='report' ? a : 'report'">Post Match Report</a></li>
         <li role="presentation" ng-class="{active:tab=='highlights'}"><a ng-click="tab = tab=='highlights' ? a : 'highlights'">Highlights</a></li>
         <li role="presentation" ng-class="{active:tab=='photos'}"><a ng-click="tab = tab=='photos' ? a : 'photos'">Photos</a></li>
     </ul>
