--- a/stats.html
+++ b/stats.html
@@ -1,44 +1,51 @@
-<div class="panel panel-primary">
-    <div class="panel-heading">Overall Player Stats</div>
-    <table class="table">
-        <tr>
-            <th>
-                <a>
-                    Player
-                </a>
-            </th>
-            <th>
-                <a ng-click="orderByField='appearances'; reverseSort = !reverseSort">
-                    Appearances <span ng-show="orderByField == 'appearances'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                </a>
-            </th>
-            <th>
-                <a ng-click="orderByField='goals'; reverseSort = !reverseSort">
-                    Goals <span ng-show="orderByField == 'goals'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                </a>
-            </th>
-            <th>
-                <a ng-click="orderByField='MOTMs'; reverseSort = !reverseSort">
-                    MOTMs <span ng-show="orderByField == 'MOTMs'">
-                        <span ng-show="!reverseSort">^</span>
-                        <span ng-show="reverseSort">v</span>
-                    </span>
-                </a>
-            </th>
-        </tr>
-        <tr ng-repeat="player in players|orderBy:orderByField:reverseSort" ">
-            <td>{{player.name}}</td>
-            <td>{{player.appearances}}</td>
-            <td>{{player.goals}}</td>
-            <td>{{player.motm}}</td>
-        </tr>
-    </table>
+<div class="row center-block">
+    <button class="btn col-md-2" ng-click="orderByField='appearances'; reverseSort = !reverseSort">
+        Appearances <span ng-show="orderByField == 'appearances'">
+            <span class="caret" ng-show="!reverseSort"></span>
+            <span class="dropup">
+                <span class="caret" ng-show="reverseSort"></span>
+            </span>
+        </span>
+    </button>
+
+    <button class="btn col-md-2 col-md-offset-1" ng-click="orderByField='goals'; reverseSort = !reverseSort">
+        Goals <span ng-show="orderByField == 'goals'">
+            <span class="caret" ng-show="!reverseSort"></span>
+            <span class="dropup">
+                <span class="caret" ng-show="reverseSort"></span>
+            </span>
+        </span>
+    </button>
+
+    <button class="btn col-md-2 col-md-offset-1" ng-click="orderByField='motm'; reverseSort = !reverseSort">
+        MOTMs <span ng-show="orderByField == 'motm'">
+            <span class="caret" ng-show="!reverseSort"></span>
+            <span class="dropup">
+                <span class="caret" ng-show="reverseSort"></span>
+            </span>
+        </span>
+    </button>
+</div>
+
+</br>
+
+<div class="row">
+    <div class="col-md-4"
+         data-ng-repeat="player in players|orderBy:orderByField:reverseSort">
+        <div class="panel-group">
+            <div class="panel panel-primary">
+                <div class="panel-heading">{{player.name}}</div>
+                <div class="panel-body">
+                    <img ng-src="photos/{{player.name}}.png" onerror="this.src='photos/NoImage.png'" class="img-responsive img-circle pull-left" style="border:10px solid #eee; margin-right:20px;">
+                    <div class="media-body">
+                        <p>Appearances: {{player.appearances}}</p>
+                        <p>Goals: {{player.goals}}</p>
+                        <p>MOTMs: {{player.motm}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="panel panel-primary" ng-repeat="awards in seasonAwards">
