--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         </nav>
         <div ng-view></div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/filters/iframeFilter.js"></script>
+    <script src="scripts/directives/tabs.js"></script>
+    <script src="scripts/models/player.js"></script>
+    <script src="scripts/controllers/statsController.js"></script>
+    <script src="scripts/controllers/seasonController.js"></script>
 </body>
 </html>
