--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div ng-view></div>
     </div>
     <script src="scripts/app.js"></script>
+    <script src="scripts/services/playerService.js"></script>
     <script src="scripts/filters/iframeFilter.js"></script>
     <script src="scripts/directives/tabs.js"></script>
     <script src="scripts/models/player.js"></script>
