--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
                     <li><a href="#stats">Home</a></li>
                     <li><a href="#season1">Season One</a></li>
                     <li><a href="#season2">Season Two</a></li>
+                    <li><a href="#addMatch">Add Match Report</a></li>
                 </ul>
             </div>
         </nav>
         <div ng-view></div>
     </div>
     <script src="scripts/app.js"></script>
+    <script src="scripts/models/player.js"></script>
     <script src="scripts/services/playerService.js"></script>
     <script src="scripts/filters/iframeFilter.js"></script>
     <script src="scripts/directives/tabs.js"></script>
-    <script src="scripts/models/player.js"></script>
+    <script src="scripts/directives/multiSelectDropdown.js"></script>
     <script src="scripts/controllers/statsController.js"></script>
     <script src="scripts/controllers/seasonController.js"></script>
+    <script src="scripts/controllers/addMatchController.js"></script>
 </body>
 </html>
